[workspace]
resolver = "2"
members = ["tss-esapi", "tss-esapi-sys"]

[patch.crates-io]
p192 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p224 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p384 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p521 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
sm2 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

# https://github.com/RustCrypto/KDFs/pull/108
concat-kdf = { git = "https://github.com/RustCrypto/KDFs.git" }

cfb-mode = { git = "https://github.com/RustCrypto/block-modes.git" }

# https://github.com/RustCrypto/RSA/pull/467
rsa = { git = "https://github.com/RustCrypto/RSA.git" }

crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git" }
crypto-primes = { git = "https://github.com/entropyxyz/crypto-primes.git" }

# https://github.com/RustCrypto/traits/issues/1738
# https://github.com/RustCrypto/traits/pull/1742
# Pending release of crypto-common 0.2.0-rc.2
# Pending release of digest 0.11.0-rc.0
crypto-common = { git = "https://github.com/RustCrypto/traits.git" }
digest = { git = "https://github.com/RustCrypto/traits.git" }
elliptic-curve = { git = "https://github.com/RustCrypto/traits.git" }
signature = { git = "https://github.com/RustCrypto/traits.git" }

# https://github.com/RustCrypto/block-ciphers/pull/465
aes = { git = "https://github.com/RustCrypto/block-ciphers.git" }
# Not actually in the graph, but a consumer should use the weak key detection there.
# des = { git = "https://github.com/RustCrypto/block-ciphers.git" }

ecdsa = { git = "https://github.com/RustCrypto/signatures.git" }
rfc6979 = { git = "https://github.com/RustCrypto/signatures.git" }

x509-cert = { git = "https://github.com/baloo/formats.git", branch = "baloo/reunite-workspace" }

hmac = { git = "https://github.com/RustCrypto/MACs.git" }

ff = { git = "https://github.com/zkcrypto/ff.git", branch = "release-0.14.0" }
group = { git = "https://github.com/pinkforest/group.git", branch = "bump-rand-0.9" }
